force-app/main/default/objects/Vehicle_Stop_Point__c/Vehicle_Stop_Point__c.object-meta.xml
<CustomObject>
    <description>车辆停靠点</description>
    <label>Vehicle Stop Point</label>
    <nameField>
        <label>Vehicle Stop Point Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vehicle Stop Points</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>