force-app/main/default/objects/Vehicle_Stop_Point__c/fields/CoverImgPublicLink__c.field-meta.xml
<CustomField>
    <fullName>CoverImgPublicLink__c</fullName>
    <label>CoverImgPublicLink</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>