force-app/main/default/objects/Vehicle_Stop_Point__c/fields/Stop_Name_CN__c.field-meta.xml
<CustomField>
    <fullName>Stop_Name_CN__c</fullName>
    <label>Stop Name CN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>