force-app/main/default/objects/Vehicle_Stop_Point__c/listViews/X137th_Canton_Fair.listView-meta.xml
<ListView>
    <fullName>X137th_Canton_Fair</fullName>
    <columns>NAME</columns>
    <columns>Expo_Vehicle_Info__c</columns>
    <columns>Description__c</columns>
    <columns>DescriptionCN__c</columns>
    <columns>Serial__c</columns>
    <columns>Stop_Name_CN__c</columns>
    <filterScope>Everything</filterScope>
    <label>137th Canton Fair</label>
</ListView>